--- a/css/common.css
+++ b/css/common.css
@@ -2,10 +2,16 @@
   box-sizing: border-box;
 }
 
+ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
 body {
   margin: 16px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #fafafa;
@@ -21,4 +27,24 @@ input {
 button {
   padding: 8px 12px;
   cursor: pointer;
+}
+
+.gallery {
+  margin-top: -30px;
+  margin-left: 0;
+  margin-right: 0;
+  margin-bottom: 0;
+  width: calc(100vw - 60px);
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.gallery__image {
+  margin-top: 30px;
+  margin-left: 30px;
+  display: block;
+  object-fit: cover;
+  width: 33%;
+  height: auto;
 }
